# generic-solver

./: .gitignore  CMakeLists.txt  LICENCE  README.md
src/: main.cpp
src/changers/: flipper.hpp
src/creators/: merger.hpp  operation-producer.hpp
src/solver/: cli.hpp  enhanced-fitness.hpp  formula.hpp  solver-base.hpp  solver.hpp  ultra-precision-fitness.hpp
src/solver/changers/: adaptive-mutator.hpp  audio-operators.hpp  changer-base.hpp  changers.hpp  decrementor-by-fragment.hpp  decrementor-by-one.hpp  flipper.hpp  function-transformer.hpp  incrementor-by-doubling.hpp  incrementor-by-fragement.hpp  incrementor-by-fragment.hpp  incrementor-by-one.hpp  precision-tuner.hpp  purger.hpp  reducer-by-fragment.hpp  reducer-by-halving.hpp  reducer-by-one.hpp  simplifier.hpp  structure-mutator.hpp  targeted-tuner.hpp  variable-swapper.hpp
src/solver/creators/: creator-base.hpp  creators.hpp  merger.hpp  number-inserter.hpp  operation-producer.hpp  operation-replacer.hpp
src/tree/: binary.hpp  enhanced-unary.hpp  tree-base.hpp  tree.hpp  unary.hpp
src/utils/: arbitrary.hpp  base.hpp  config.hpp  csv.hpp
test/: CMakeLists.txt  csv-parser-test.cpp  flipper-test.cpp  formula-test.cpp  merger-test.cpp  number-incrementor-test.cpp  number-inserter-test.cpp  operation-producer-test.cpp  operation-replacer-test.cpp  purger-test.cpp  solver-test.cpp  test.hpp  tree-test.cpp
test/resources/: circle-results.csv  csv-parser-nok.csv  csv-parser-ok.csv  square-plus-three-results.csv
