add_executable(csv-parser-test csv-parser-test.cpp)
add_executable(flipper-test flipper-test.cpp)
add_executable(formula-test formula-test.cpp)
add_executable(merger-test merger-test.cpp)
add_executable(number-incrementor-test number-incrementor-test.cpp)
add_executable(number-inserter-test number-inserter-test.cpp)
add_executable(operation-producer-test operation-producer-test.cpp)
add_executable(operation-replacer-test operation-replacer-test.cpp)
add_executable(purger-test purger-test.cpp)
add_executable(solver-test solver-test.cpp)
add_executable(tree-test tree-test.cpp)